# Squig

./: .gitignore  .gitmodules  7_swcontext_dbg.txt  CMakeLists.txt  NOTES.md  README.md  TESTS.md  andr01.txt  setup.sh
_old/RTMPServer/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
_old/RTMPServer/include/: rtmp_capi.hpp  rtmp_server.hpp
_old/RTMPServer/server/cpp/: main.cpp
_old/RTMPServer/src/: rtmp_capi.cpp  rtmp_server.cpp
assets/: ffmpeg-frame-extract.webm
debug/: 1_96RTMPMessages.pcap  1_96RTMPMessages.txt  2_384RTMPMessages.pcap  3_384RTMPMessages_Pause.pcap  imshowtimes.txt  logs-android.txt  logs-ios.txt  logs-rtmpdump.txt
html/: __deps_2easyrtmp-build_2_c_make_files_2easyrtmp_8dir_2link_8txt.html  _c_make_files_2_squig_8dir_2link_8txt.html  _c_make_files_2squig_8dir_2link_8txt.html  _c_make_lists_8txt.html  _c_make_rule_hashes_8txt.html  _easy_rtmp_d_l_l_a_p_i_8h.html  _easy_rtmp_d_l_l_a_p_i_8h_source.html  _labels_8txt.html  _n_o_t_e_s_8md.html  _r_e_a_d_m_e_8md.html  _r_t_m_p_server_2_c_make_lists_8txt.html  _r_t_m_p_server_2_r_e_a_d_m_e_8md.html  _r_t_m_p_server_2build_2_c_make_cache_8txt.html  _r_t_m_p_server_2build_2_c_make_files_23_828_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _r_t_m_p_server_2build_2_c_make_files_23_828_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _r_t_m_p_server_2build_2_c_make_files_2_target_directories_8txt.html  _r_t_m_p_server_2server_2cpp_2main_8cpp.html  _squig_8dir_2src_2main_8cpp_8o_8d.html  amf_8cpp.html  amf_8cpp_8o_8d.html  amf_8h.html  amf_8h_source.html  annotated.html  build_2__deps_2easyrtmp-src_2_c_make_lists_8txt.html  build_2__deps_2easyrtmp-src_2_r_e_a_d_m_e_8md.html  build_2__deps_2easyrtmp-src_2test__package_2_c_make_lists_8txt.html  build_2__deps_2easyrtmp-subbuild_2_c_make_cache_8txt.html  build_2__deps_2easyrtmp-subbuild_2_c_make_files_2_target_directories_8txt.html  build_2__deps_2easyrtmp-subbuild_2_c_make_lists_8txt.html  build_2_c_make_cache_8txt.html  build_2_c_make_files_23_828_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  build_2_c_make_files_23_828_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  build_2_c_make_files_2_target_directories_8txt.html  class_a_m_f_value-members.html  class_a_m_f_value.html  class_a_m_f_value_1_1iterator-members.html  class_a_m_f_value_1_1iterator.html  class_data_layer-members.html  class_data_layer.html  class_open_s_s_l___t_l_s-members.html  (+260 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  (+119 more)
include/: rtmp_server.h
src/: main.cpp  streamdecoder.cpp  utils.hpp
testing/: perf-evals.ipynb  squigV0_e2e_latencies.csv
(+12 files in other folders)
